...
                                                         android:fitsSystemWindows="true">
            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    app:contentInsetEnd="0dp"
                    app:contentInsetStart="0dp"
...
                                    android:orientation="horizontal"
                            >

                                <android.support.v7.widget.CardView
                                        android:layout_width="0dp"
                                        android:layout_height="160dp"
                                        android:id="@+id/btn1"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:clickable="true"
                                        app:cardElevation="4dp"
                                        app:cardCornerRadius="4dp"
                                        android:foreground="?android:attr/selectableItemBackground"
...
                                    </RelativeLayout>

                                </android.support.v7.widget.CardView>
                                <android.support.v7.widget.CardView
                                        android:layout_width="0dp"
                                        android:layout_height="160dp"
                                        android:id="@+id/btn2"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:clickable="true"
                                        app:cardElevation="4dp"
                                        app:cardCornerRadius="4dp"
                                        android:foreground="?android:attr/selectableItemBackground"
...
                                    android:layout_height="170dp"
                                    android:orientation="horizontal">

                                <android.support.v7.widget.CardView
                                        android:layout_width="0dp"
                                        android:layout_height="160dp"
                                        android:id="@+id/btn3"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:clickable="true"
                                        app:cardElevation="4dp"
                                        app:cardCornerRadius="4dp"
                                        android:foreground="?android:attr/selectableItemBackground"
...
                                    </RelativeLayout>

                                </android.support.v7.widget.CardView>
                                <android.support.v7.widget.CardView
                                        android:layout_width="0dp"
                                        android:layout_height="160dp"
                                        android:id="@+id/btn4"
                                        android:layout_weight="1"
                                        android:gravity="center"
                                        android:clickable="true"
                                        app:cardElevation="4dp"
                                        app:cardCornerRadius="4dp"
                                        android:foreground="?android:attr/selectableItemBackground"
...

        </android.support.design.widget.CoordinatorLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer"
            app:headerLayout="@layout/nav_header"/>
...
