<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ndActivity.KontakActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:id="@+id/subjek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Subjek"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp"
                        android:inputType="text|textCapSentences"
                        android:layout_margin="10dp"
                        android:padding="10dp" />

                <EditText
                        android:id="@+id/pesan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_margin="10dp"
                        android:hint="Tulis Pesan disini..."
                        android:layout_below="@id/subjek"
                        android:inputType="text|textCapSentences"
                        android:minHeight="150dp"
                        android:padding="10dp"/>

                <Button
                        android:id="@+id/btnKirim"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/pesan"
                        android:text="Kirim" android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>