<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".LatihanActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="4dp"
                app:cardCornerRadius="4dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:id="@+id/tv_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20sp"/>

                <RadioGroup
                        android:id="@+id/rg_choice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_question">
                    <RadioButton
                            android:id="@+id/rb_choice1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>

                    <RadioButton
                            android:id="@+id/rb_choice2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp" />
                    <RadioButton
                            android:id="@+id/rb_choice3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>
                    <RadioButton
                            android:id="@+id/rb_choice4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"/>

                </RadioGroup>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rg_choice">

                    <Button
                            android:id="@+id/btnNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:text="@string/next"
                            android:layout_marginTop="60dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:textAllCaps="false"
                            android:padding="10dp"
                            android:textColor="@android:color/white"
                            android:textSize="21sp"

                    />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>